# thesis

./: CMakeLists.txt  README.md  data_generation_commands.md  input_01.txt  input_02.txt  input_03.txt  input_04.txt  input_05.txt  main.cpp  utility_func.cpp  utility_func.hpp
data/vcfs/: bam_1.txt  bam_2.txt  bam_3.txt  bam_4.txt  bam_5.txt  bam_6.txt  bam_7.txt  bam_8.txt
unit_tests/: input_test_01.txt  test_runner.cpp  tests.cpp
